Experience rewrite with clear highlights

--- a/index.html
+++ b/index.html
@@ -412,21 +412,23 @@
                             <p id="date-range">March 2022 - Present</p>
                             <div>
                                 <p id="experience-description">
-                                    As a Machine Learning Engineer at WooliesX,
-                                    the technology arm of the Woolworths Group,
-                                    I spearheaded the development of innovative
-                                    ML-powered solutions for demand generation
-                                    and intelligent marketing. Collaborating
-                                    across teams, I leveraged advanced
-                                    algorithms and data insights to optimize
-                                    marketing strategies and enhance customer
-                                    engagement. Our efforts resulted in
-                                    transformative initiatives, harnessing the
-                                    power of machine learning to drive targeted
-                                    campaigns and personalized experiences,
-                                    reinforcing WooliesX's commitment to
-                                    customer satisfaction and technological
-                                    innovation.
+                                    Engineered machine learning models to
+                                    optimize offer allocation, resulting in a
+                                    16% increase in customer engagement and
+                                    incremental sales. Developed deep learning
+                                    models for real-time behavioral targeting,
+                                    boosting engagement and conversion rates by
+                                    10%. Led the creation of 'Modelverse,' an
+                                    in-house MLOps platform integrating MLflow,
+                                    which reduced deployment times and improved
+                                    model governance. Automated scalable
+                                    pipelines, reducing time-to-market by 40%,
+                                    and empowered data-driven marketing
+                                    strategies that enhanced customer
+                                    satisfaction. Collaborated with
+                                    cross-functional teams to ensure seamless
+                                    deployment of high-performance machine
+                                    learning models in production.
                                 </p>
                             </div>
                         </div>
@@ -447,19 +449,18 @@
                             <p id="date-range">Oct 2021 - Mar 2022</p>
                             <div>
                                 <p id="experience-description">
-                                    As a Software Engineer at Servian, I
-                                    specialized in architecting end-to-end
-                                    machine learning pipelines, leveraging
-                                    Python, scikit-learn, TensorFlow, and
-                                    PyTorch to develop and deploy scalable
-                                    models. Collaborating closely with data
-                                    scientists, I translated complex
-                                    requirements into efficient solutions and
-                                    implemented robust data infrastructures for
-                                    seamless model integration into production.
-                                    I actively explored emerging technologies,
-                                    contributing to Servian's culture of
-                                    innovation in data-driven solutions.
+                                    Developed scalable recommendation algorithms
+                                    using collaborative filtering, content-based
+                                    models, and deep learning, improving
+                                    customer satisfaction and engagement by 8%,
+                                    while driving incremental revenue in retail
+                                    and media. Designed and deployed advanced
+                                    machine learning pipelines, integrating
+                                    real-time recommendation models into
+                                    production. Built a modular, reusable
+                                    framework with Python and PyTorch, enabling
+                                    rapid iteration and scalable deployment of
+                                    ML models.
                                 </p>
                             </div>
                         </div>
@@ -480,20 +481,21 @@
                             <p id="date-range">Feb 2021 - Oct 2021</p>
                             <div>
                                 <p id="experience-description">
-                                    As an AI Engineer at 6Clicks, I played a
-                                    pivotal role in the development and
-                                    enhancement of the Hailey AI Engine, a
-                                    cornerstone of the company's disruptive GRC
-                                    platform. Leveraging advanced techniques in
-                                    natural language processing and machine
-                                    learning, I engineered solutions to empower
-                                    organizations with actionable insights and
-                                    automation capabilities. Working within a
-                                    multi-tenanted architecture, I collaborated
-                                    closely with cross-functional teams to
-                                    integrate the Hailey AI Engine seamlessly
-                                    into the platform, delivering enhanced
-                                    functionality and value to users.
+                                    Played a key role in designing and enhancing
+                                    the Hailey AI Engine, the core of 6Clicks’
+                                    GRC platform, revolutionizing the automation
+                                    of compliance processes and reducing task
+                                    times from days to seconds. Leveraged
+                                    advanced machine learning and natural
+                                    language processing (NLP) to implement
+                                    features like Compliance Mapping and Policy
+                                    Gap Analysis, delivering instant insights
+                                    into control overlaps and streamlining risk
+                                    management. Ensured seamless integration of
+                                    the AI engine into the multi-tenant
+                                    platform, providing real-time, AI-driven
+                                    insights that added significant value for
+                                    users.
                                 </p>
                             </div>
                         </div>
