Profile picture updated

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="profile-pic-container">
                             <img
                                 id="profile_pic"
-                                src="images/abhinav_profile.jpg"
+                                src="images/abhi_profile.jpg"
                             />
                         </div>
                         <h5 style="text-align: center; line-height: 0">
