Updated index and resume

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                         <h4>TOP EXPERTISE</h4>
 
                         <p>
-                            Fullstack developer with primary focus on building
-                            data intensive applications:
+                            Fullstack AI developer with primary focus on
+                            building data intensive applications:
                             <a target="_blank" href="abhinavSinghResume.pdf"
                                 >Download Resume</a
                             >
@@ -175,10 +175,10 @@
                         <div id="skills">
                             <ul>
                                 <li>Python</li>
+                                <li>C++</li>
                                 <li>Go</li>
                                 <li>Machine Learning</li>
                                 <li>SQL</li>
-                                <li>MongoDB</li>
                                 <li>TensorFlow</li>
                             </ul>
 
@@ -188,7 +188,7 @@
                                 <li>PyTorch</li>
                                 <li>Scikit-Learn</li>
                                 <li>Elastic</li>
-                                <li>HTML/CSS</li>
+                                <li>MongoDB</li>
                             </ul>
                         </div>
                     </div>
@@ -501,7 +501,7 @@
                         </div>
                         <div class="content__section" data-tab="4">
                             <h6>
-                                <span>Consultant</span>
+                                <span>Associate Software Engineer</span>
                                 <span>
                                     <a
                                         href="https://www.ey.com"
@@ -515,22 +515,23 @@
                             <p id="date-range">Aug 2016 - Sept 2018</p>
                             <div>
                                 <p id="experience-description">
-                                    As a consultant at EY, I specialized in
-                                    delivering automation solutions from
-                                    analysis to production, while also assisting
-                                    clients in establishing and scaling
-                                    enterprise-wide Robotics Centers of
-                                    Excellence (CoE). My work spanned diverse
-                                    industries such as supply chain, banking,
-                                    asset management, HR, and accounts, where I
-                                    designed and developed tailored automation
-                                    solutions to optimize operations and drive
-                                    efficiency. Leveraging deep technical
-                                    knowledge and industry insights, I navigated
-                                    complex challenges to ensure successful
-                                    implementations, ultimately delivering
-                                    tangible business transformations and
-                                    strategic growth for our clients.
+                                    Engineered and deployed end-to-end
+                                    automation solutions across industries such
+                                    as supply chain, banking, and HR, utilizing
+                                    RPA tools (UiPath, Automation Anywhere) and
+                                    custom Python scripting to create scalable
+                                    workflows. Integrated with enterprise
+                                    systems through REST APIs, reducing manual
+                                    workloads by over 25%, while ensuring robust
+                                    error handling in production environments.
+                                    Additionally, designed and implemented
+                                    enterprise-grade automation frameworks for
+                                    Robotics Centers of Excellence (CoE),
+                                    incorporating modular workflows, CI/CD
+                                    pipelines, and version control, optimizing
+                                    processes for 40% higher throughput,
+                                    enabling scalable automation adoption, and
+                                    ensuring compliance with security standards.
                                 </p>
                             </div>
                         </div>
