SEO optimisation fix

--- a/index.html
+++ b/index.html
@@ -1,14 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Abhinav Singh</title>
-        <meta name="description" content="" />
+        <title>Abhinav Singh | Machine Learning Engineer</title>
+
+        <!-- Primary Meta Tags -->
+        <meta
+            name="title"
+            content="Abhinav Singh | Machine Learning Engineer"
+        />
+        <meta
+            name="description"
+            content="Machine Learning Engineer specialized in building data intensive applications. Full stack AI developer with expertise in Python, Docker, and Cloud technologies."
+        />
+        <meta
+            name="keywords"
+            content="Machine Learning Engineer, AI Developer, Python Developer, MLOps, Data Science, Full Stack Developer"
+        />
+        <meta name="author" content="Abhinav Singh" />
+        <meta name="robots" content="index, follow" />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://abhinavsingh95.github.io/" />
+        <meta
+            property="og:title"
+            content="Abhinav Singh | Machine Learning Engineer"
+        />
+        <meta
+            property="og:description"
+            content="Machine Learning Engineer specialized in building data intensive applications"
+        />
+        <meta property="og:image" content="images/abhi_profile.jpg" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta
+            property="twitter:url"
+            content="https://abhinavsingh95.github.io/"
+        />
+        <meta
+            property="twitter:title"
+            content="Abhinav Singh | Machine Learning Engineer"
+        />
+        <meta
+            property="twitter:description"
+            content="Machine Learning Engineer specialized in building data intensive applications"
+        />
+        <meta property="twitter:image" content="images/abhi_profile.jpg" />
+
+        <!-- Viewport and existing meta tags -->
         <meta
             name="viewport"
-            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1"
+            content="width=device-width, initial-scale=1, maximum-scale=5"
         />
+
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -33,6 +80,30 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     </head>
     <body>
+        <!-- Add structured data for person -->
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "Person",
+                "name": "Abhinav Singh",
+                "jobTitle": "Machine Learning Engineer",
+                "url": "https://abhinavsingh95.github.io/",
+                "sameAs": [
+                    "https://github.com/AbhinavSingh95",
+                    "https://www.linkedin.com/in/init-abs/",
+                    "https://www.instagram.com/__init__abs/"
+                ],
+                "worksFor": {
+                    "@type": "Organization",
+                    "name": "WooliesX"
+                },
+                "alumni": {
+                    "@type": "CollegeOrUniversity",
+                    "name": "University of Melbourne"
+                }
+            }
+        </script>
+
         <div id="preloader"></div>
         <section class="s1">
             <div class="main-container">
