floating eye animation enhancement

--- a/index.html
+++ b/index.html
@@ -153,7 +153,15 @@
             <section class="s1">
                 <div class="main-container">
                     <div class="greeting-wrapper">
-                        <h1>Hi, I'm Abhinav Singh</h1>
+                        <h1>
+                            Hi, I'm Abh<span class="i-container"
+                                >i<span class="floating-eye"
+                                    ><div class="eye">
+                                        <div
+                                            class="pupil"
+                                        ></div></div></span></span
+                            >nav Singh
+                        </h1>
                     </div>
 
                     <div class="intro-wrapper">
@@ -202,6 +210,7 @@
                                     width="200"
                                     height="200"
                                     decoding="async"
+                                    class="slide-in-left"
                                 />
                             </div>
                             <h5 style="text-align: center; line-height: 0">
@@ -239,7 +248,7 @@
 
                         <div class="right-column">
                             <div id="preview-shadow">
-                                <div id="preview">
+                                <div id="preview" class="slide-in-right">
                                     <div id="corner-tl" class="corner"></div>
                                     <div id="corner-tr" class="corner"></div>
                                     <h3>Who am I?</h3>
