content refinement and resume update

--- a/index.html
+++ b/index.html
@@ -273,23 +273,34 @@
                             <h4>More about me</h4>
 
                             <p>
-                                I'm currently an Engineer at WooliesX, building
-                                applications enabling data-driven
-                                decision-making with an extraordinary team. I
-                                graduated from the University of Melbourne after
-                                completing my master's in Information
-                                Technology.
+                                I'm a Senior ML Engineer at WooliesX, where I
+                                design and implement cutting-edge solutions that
+                                enable data-driven decision-making at scale.
+                                With a Master’s in Information Technology from
+                                UniMelb, I specialize in bridging the gap
+                                between engineering and data science, creating
+                                robust, efficient, and secure machine learning
+                                applications tailored to real-world business
+                                needs.
                             </p>
 
                             <p>
-                                As a Machine Learning Engineer, I strive to
-                                bridge the gap between engineering and data
-                                science, leveraging my technical expertise and
-                                design acumen to craft applications that are
-                                both secure and compliant, yet flexible and
-                                efficient. My primary goal is to create scalable
-                                and reliable products that provide an enjoyable,
-                                user-friendly experience.
+                                At the core of my work is the development of
+                                scalable, end-to-end MLOps platforms like
+                                Modelverse, designed to streamline model
+                                versioning, deployment, and collaboration across
+                                teams. I harness advanced technologies such as
+                                generative AI, agentic frameworks, semantic
+                                embeddings, and vector databases to create
+                                personalized recommendation systems, dynamic
+                                content delivery platforms, and real-time
+                                decision-making engines. By integrating
+                                cutting-edge machine learning techniques with
+                                robust engineering practices, I deliver
+                                innovative, user-focused solutions that are both
+                                technically sophisticated and operationally
+                                seamless, driving meaningful business impact
+                                across diverse domains.
                             </p>
 
                             <hr />
@@ -308,7 +319,7 @@
                                 <ul>
                                     <li>Python</li>
                                     <li>C++</li>
-                                    <li>Go</li>
+                                    <li>AI</li>
                                     <li>Machine Learning</li>
                                     <li>SQL</li>
                                     <li>TensorFlow</li>
@@ -601,24 +612,24 @@
                                 <p id="date-range">March 2022 - Present</p>
                                 <div>
                                     <p id="experience-description">
-                                        Engineered machine learning models to
-                                        optimize offer allocation, resulting in
-                                        a 16% increase in customer engagement
-                                        and incremental sales. Developed deep
-                                        learning models for real-time behavioral
-                                        targeting, boosting engagement and
-                                        conversion rates by 10%. Led the
-                                        creation of 'Modelverse,' an in-house
-                                        MLOps platform integrating MLflow, which
-                                        reduced deployment times and improved
-                                        model governance. Automated scalable
-                                        pipelines, reducing time-to-market by
-                                        40%, and empowered data-driven marketing
-                                        strategies that enhanced customer
-                                        satisfaction. Collaborated with
-                                        cross-functional teams to ensure
-                                        seamless deployment of high-performance
-                                        machine learning models in production.
+                                        At WooliesX, I developed intelligent
+                                        systems to enhance data-driven
+                                        decision-making and user experiences.
+                                        This includes engineering recommendation
+                                        systems with vector databases like
+                                        Weaviate, creating an agentic AI chatbot
+                                        for customer support, and developing
+                                        real-time behavioral targeting and offer
+                                        allocation models to boost engagement
+                                        and sales. I also led the creation of
+                                        Modelverse, an end-to-end MLOps platform
+                                        integrating MLflow, enabling scalable,
+                                        high-density model serving. By
+                                        implementing automated pipelines and
+                                        scalable deployments with tools like
+                                        PyTorch, Kubernetes, and Docker, I
+                                        reduced time-to-market while ensuring
+                                        robust and reliable production systems.
                                     </p>
                                 </div>
                             </div>
